<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingVertical="5sp"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/voice_assistant" />

        <Button
            android:id="@+id/btn_speak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:text="@string/speak" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar">

        <LinearLayout
            android:paddingVertical="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10sp"
                android:padding="2sp"
                android:background="@drawable/card_background"
                android:src="@drawable/disha" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                app:cardCornerRadius="15sp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hi I am Trisha, How can I help you?" />

                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottombar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:background="@color/secondary">

        <EditText
            android:id="@+id/et_chat"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:hint="@string/query"
            android:layout_weight="1"
            android:layout_margin="10sp"
            android:padding="10sp"
            android:textColor="@color/black"
            android:background="@drawable/card_background" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/primary"
            android:text="@string/send" />

    </LinearLayout>



</RelativeLayout>