<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:background="@color/primary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/app_header" />

        <ImageView
            android:id="@+id/img_changeLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20sp"
            android:src="@drawable/translate_logo" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/topheader"
        android:layout_below="@id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15sp"
        android:paddingBottom="15sp"
        android:orientation="vertical"
        android:background="@color/secondary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:src="@drawable/indian_railways_logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:paddingHorizontal="10sp"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="220sp"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/app_welcome" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mapbar"
            app:cardElevation="0dp"
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/card_background"
            app:cardBackgroundColor="@android:color/transparent"
            android:orientation="horizontal">

            <org.osmdroid.views.MapView
                android:id="@+id/mapView"
                android:background="@drawable/card_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topheader"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="10sp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_platforms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            app:cardElevation="0sp"
            android:layout_margin="10sp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/card_background"
                android:gravity="center"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/tab_platforms"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            app:cardElevation="0sp"
            android:layout_margin="10sp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/card_background"
                android:gravity="center"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_amenities"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_marginHorizontal="5sp"
        android:weightSum="1">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            app:cardElevation="0sp"
            android:layout_margin="10sp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:gravity="center"
                android:background="@drawable/card_background"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/tab_emergency"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            app:cardElevation="0sp"
            android:layout_margin="10sp"
            android:layout_weight="0.5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80sp"
                android:background="@drawable/card_background"
                android:gravity="center"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_platforms"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_voiceassist"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/secondary"
        android:textColor="@color/black"
        android:text="@string/fab_voice_assistant" />

</RelativeLayout>